# urlicht

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt
benchmark/adaptor/: CMakeLists.txt  bm_flat_map.cpp
benchmark/algorithm/: bm_lower_bound.cpp
benchmark/any/: bm_anys.cpp
benchmark/concurrency/: bm_percpu_counter.cpp
benchmark/functional/: bm_adaptive_function.cpp
benchmark/memory/: bm_arena.cpp
include/urlicht/: compare.h  concepts_utility.h  config.h
include/urlicht/adaptor/: flat_map.h  union_find.hpp
include/urlicht/adaptor/detail/: flat_map_utils_.h
include/urlicht/algorithm/: binary_search.h  lower_bound.h  upper_bound.h
include/urlicht/any/: adaptive_any.h  any_view.h  inplace_any.h
include/urlicht/any/detail/: utils.h
include/urlicht/concurrency/: percpu_counter.hpp
include/urlicht/concurrency/detail/: single_counter.hpp
include/urlicht/container/: inplace_vector.h  inplace_vector.hpp  union_find.h
include/urlicht/functional/: adaptive_function.h  adaptive_move_only_function.h
include/urlicht/functional/detail/: adaptive_function_base.h  adaptive_function_fwd.h
include/urlicht/internal/: scope_guard.h  tag.h
include/urlicht/memory/: arena.h  arena_view.h  concurrent_arena.h  tagged_ptr.h
include/urlicht/memory/detail/: arena_fwd.h
include/urlicht/memory/pmr/: arena_resource.hpp
include/urlicht/procedural/graph/: kruskal_mst.h
include/urlicht/procedural/search/: binary_search.h  lower_bound.h  upper_bound.h
tests/: CMakeLists.txt
tests/adaptor/: test_flat_map.cpp
tests/algorithm/: test_binary_search.cpp  test_lower_bound.cpp  test_upper_bound.cpp
tests/any/: test_adaptive_any.cpp  test_any_view.cpp  test_inplace_any.cpp
tests/concurrency/: test_percpu_counter.cpp
tests/container/: test_inplace_vector.cpp
tests/functional/: test_adaptive_function.cpp  test_adaptive_functions.cpp
tests/memory/: test_arena.cpp  test_arena_resource.cpp  test_arena_view.cpp  test_tagged_ptr.cpp
tests/procedural/: test_binary_search.cpp  test_lower_bound.cpp  test_upper_bound.cpp
